tests/ui/migrate/invalid_key.rs
fn main() {
    //Fails due to invalid key
    sqlx::migrate!("foo", parameters = [(123, "foo")]);
}
